Added ul elements

--- a/home.html
+++ b/home.html
@@ -10,9 +10,13 @@
     <nav>
         <ul>
             <li>
+                <a href="home.html">Home</a>
             </li>
+                <a href="trending.html">Trending</a>
             <li>
+                <a href="movies.html">Trending</a>
             </li>
+                <a href="tvshows.html">Tv Shows</a>
             <li>
             </li>
         </ul>
